mensagens de aviso na tela de cadastro e login

--- a/Website/public/cadastro.html
+++ b/Website/public/cadastro.html
@@ -10,6 +10,24 @@
 
 <body>
 
+    <div class="aviso" id="aviso1">
+        <div class="alerta_icone">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none">
+                <path fill="#393a37"
+                    d="m13 13h-2v-6h2zm0 4h-2v-2h2zm-1-15c-1.3132 0-2.61358.25866-3.82683.7612-1.21326.50255-2.31565 1.23915-3.24424 2.16773-1.87536 1.87537-2.92893 4.41891-2.92893 7.07107 0 2.6522 1.05357 5.1957 2.92893 7.0711.92859.9286 2.03098 1.6651 3.24424 2.1677 1.21325.5025 2.51363.7612 3.82683.7612 2.6522 0 5.1957-1.0536 7.0711-2.9289 1.8753-1.8754 2.9289-4.4189 2.9289-7.0711 0-1.3132-.2587-2.61358-.7612-3.82683-.5026-1.21326-1.2391-2.31565-2.1677-3.24424-.9286-.92858-2.031-1.66518-3.2443-2.16773-1.2132-.50254-2.5136-.7612-3.8268-.7612z">
+                </path>
+            </svg>
+        </div>
+        <div class="alerta_texto">Não deixe nenhum campo vazio</div>
+    </div>
+
+    <div class="aviso" id="aviso2">
+        <div class="alerta_icone">
+            <img src="assets/img/correto.svg" alt="">
+        </div>
+        <div class="alerta_texto">Cadastro realizado com sucesso!</div>
+    </div>
+
     <button class="voltar" onclick="window.location = 'index.html'">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M6 12H18M6 12L11 7M6 12L11 17" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
@@ -76,12 +94,14 @@
 
 <script>
 
+    var verificacao = false;
+    var validacaoTamamho = false
+    var letraMaiuscula = false
+
+
     function validarTexto() {
         var senha = input_senha.value
-
-        var verificacao = false;
         var tamanho = senha.length
-        var letraMaiuscula = false
 
         if (senha.toLowerCase() != senha) {
             letraMaiuscula = true
@@ -98,6 +118,7 @@
             document.getElementById("quantidade").style.color = 'red'
         } else {
             document.getElementById("quantidade").style.color = 'green'
+            validacaoTamamho = true
         }
 
         for (var i = 0; i <= 9; i++) {
@@ -116,12 +137,9 @@
 
 
     }
-    // Array para armazenar empresas cadastradas para validação de código de ativação 
     function cadastro() {
         // aguardar();
 
-        //Recupere o valor da nova input pelo nome do id
-        // Agora vá para o método fetch logo abaixo
         var nomeVar = input_nome.value;
         var emailVar = input_email.value;
         var senhaVar = input_senha.value;
@@ -129,7 +147,6 @@
         var nascimentoVar = input_nascimento.value;
         var nivelVar = document.querySelector('input[name="input_nivel"]:checked')?.value;
 
-        // Verificando se há algum campo em branco
         if (
             nomeVar == "" ||
             emailVar == "" ||
@@ -138,49 +155,54 @@
             nascimentoVar == "" ||
             nivelVar == ""
         ) {
-            console.log("Mensagem de erro para todos os campos em branco");
+            document.getElementById('aviso1').style.display = 'flex'
             return false;
         }
-        // Enviando o valor da nova input
-        fetch("/usuarios/cadastrar", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-                // crie um atributo que recebe o valor recuperado aqui
-                // Agora vá para o arquivo routes/usuario.js
-                nomeServer: nomeVar,
-                emailServer: emailVar,
-                senhaServer: senhaVar,
-                sexoServer: sexoVar,
-                nascimentoServer: nascimentoVar,
-                nivelServer: nivelVar
-            }),
-        })
-            .then(function (resposta) {
-                console.log("resposta: ", resposta);
+        if (letraMaiuscula == true && validacaoTamamho == true && verificacao == true) {
 
-                if (resposta.ok) {
-                    // cardErro.style.display = "block";
-
-                    // mensagem_erro.innerHTML =
-                    //     "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
-
-                    alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...")
-
-                    setTimeout(() => {
-                        window.location = "login.html";
-                    }, "2000");
-
-                } else {
-                    throw "Houve um erro ao tentar realizar o cadastro!";
-                }
+            // Enviando o valor da nova input
+            fetch("/usuarios/cadastrar", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                    // crie um atributo que recebe o valor recuperado aqui
+                    // Agora vá para o arquivo routes/usuario.js
+                    nomeServer: nomeVar,
+                    emailServer: emailVar,
+                    senhaServer: senhaVar,
+                    sexoServer: sexoVar,
+                    nascimentoServer: nascimentoVar,
+                    nivelServer: nivelVar
+                }),
             })
-            .catch(function (resposta) {
-                console.log(`#ERRO: ${resposta}`);
-            });
+                .then(function (resposta) {
+                    console.log("resposta: ", resposta);
 
-        return false;
+                    if (resposta.ok) {
+                        // cardErro.style.display = "block";
+
+                        // mensagem_erro.innerHTML =
+                        //     "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+
+                        document.getElementById('aviso2').style.display = 'flex'
+
+                        setTimeout(() => {
+                            window.location = "login.html";
+                        }, "2000");
+
+                    } else {
+                        throw "Houve um erro ao tentar realizar o cadastro!";
+                    }
+                })
+                .catch(function (resposta) {
+                    console.log(`#ERRO: ${resposta}`);
+                });
+
+            return false;
+        } else {
+            // alert('validação não atende')
+        }
     }
 </script>
