validação das alternativas do quiz

--- a/Website/public/quizes.html
+++ b/Website/public/quizes.html
@@ -87,6 +87,17 @@
         teste
     </main>
     <main id="quiz">
+        <div class="aviso" id="aviso1">
+            <div class="alerta_icone">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none">
+                    <path fill="white"
+                        d="m13 13h-2v-6h2zm0 4h-2v-2h2zm-1-15c-1.3132 0-2.61358.25866-3.82683.7612-1.21326.50255-2.31565 1.23915-3.24424 2.16773-1.87536 1.87537-2.92893 4.41891-2.92893 7.07107 0 2.6522 1.05357 5.1957 2.92893 7.0711.92859.9286 2.03098 1.6651 3.24424 2.1677 1.21325.5025 2.51363.7612 3.82683.7612 2.6522 0 5.1957-1.0536 7.0711-2.9289 1.8753-1.8754 2.9289-4.4189 2.9289-7.0711 0-1.3132-.2587-2.61358-.7612-3.82683-.5026-1.21326-1.2391-2.31565-2.1677-3.24424-.9286-.92858-2.031-1.66518-3.2443-2.16773-1.2132-.50254-2.5136-.7612-3.8268-.7612z">
+                    </path>
+                </svg>
+            </div>
+            <div class="alerta_texto">Selecione uma alternativa</div>
+        </div>
+
         <div id="pontuacaoEJogo">
             <div id="pontuacao" class="flex-colunar width-fit-content border-primary">
                 <div id="pontuacaoDuranteJogo" class="flex-colunar padding-8">
@@ -259,6 +270,7 @@
     }
 
     function iniciarQuiz(quiz, escondido1, escondido2, idDoquiz) {
+        document.getElementById('historico').style.display = 'none'
         document.getElementById('quiz').style.display = 'flex'
         tempo = setInterval(() => {
             // if (contador == 60) {
@@ -307,6 +319,7 @@
 
     function submeter() {
         const options = document.getElementsByName("option"); // recupera alternativas no html
+            document.getElementById('aviso1').style.display = 'none'
 
         let hasChecked = false
         for (let i = 0; i < options.length; i++) {
@@ -317,7 +330,7 @@
         }
 
         if (!hasChecked) {
-            alert("Não há alternativas escolhidas. Escolha uma opção.")
+            document.getElementById('aviso1').style.display = 'flex'
         } else {
             btnSubmeter.disabled = true
             btnProx.disabled = false
