realização da tela de dashboard geral

--- a/Website/public/cadastro.html
+++ b/Website/public/cadastro.html
@@ -61,7 +61,7 @@
 
                 <div class="caixa">
                     <label for="">Data de Nascimento:</label>
-                    <input type="date" id="input_nascimento">
+                    <input type="number" id="input_nascimento">
                 </div>
             </div>
 
