--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -19,7 +19,7 @@
             <button>Campeões</button>
             <button>Figuras Hitóricas</button>
             <button onclick="analisar()">Quiz</button>
-            <button id="dashboard">Dashboard</button>
+            <button id="dashboard" onclick="window.location = 'dashboard.html'">Dashboard</button>
         </div>
         <div class="acesso">
             <button id="button_sair" class="sair" onclick="limparSessao()">Sair</button>
