--- a/Website/public/quiz1.html
+++ b/Website/public/quiz1.html
@@ -14,7 +14,7 @@
         <ul>
             <img id="logo" src="assets/img/LOGO.svg" alt="">
 
-            <button class="select-aside" onclick="mostrarHistorico()">
+            <button id="selecionado" class="select-aside" onclick="window.location = 'dashboard.html'">
                 <svg class="icone" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                     text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
                     clip-rule="evenodd" viewBox="0 0 512 513.11">
@@ -26,7 +26,7 @@
                 </div>
             </button>
 
-            <button class="select-aside" id="selecionado" onclick="iniciarQuiz(listaDeQuestoes1, 'quiz2', 'quiz3', 1)">
+            <button class="select-aside" onclick="window.location = 'quiz1.html'">
                 <svg class="icone" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                     text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
                     clip-rule="evenodd" viewBox="0 0 512 513.11">
@@ -38,7 +38,7 @@
                 </div>
             </button>
 
-            <button class="select-aside" id="quiz2" onclick="iniciarQuiz(listaDeQuestoes2,'quiz1','quiz3',2)">
+            <button class="select-aside" onclick="window.location = 'quiz2.html'">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 328 328" xml:space="preserve">
                     <g id="XMLID_455_">
@@ -56,7 +56,7 @@
             </button>
 
 
-            <button class="select-aside" id="quiz3" onclick="iniciarQuiz(listaDeQuestoes3, 'quiz1','quiz2',3)">
+            <button class="select-aside"" onclick="window.location = 'quiz3.html'">
                 <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                     text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
                     clip-rule="evenodd" viewBox="0 0 511.999 463.377">
@@ -65,6 +65,23 @@
                 </svg>
                 <div class="caixa">
                     <p>Quiz 3 </p>
+                </div>
+            </button>
+
+            <button class="select-aside" onclick="window.location = 'cadastroADM.html'">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 328 328" xml:space="preserve">
+                    <g id="XMLID_455_">
+                        <path id="XMLID_458_"
+                            d="M15,286.75h125.596c19.246,24.348,49.031,40,82.404,40c57.897,0,105-47.103,105-105s-47.103-105-105-105 c-34.488,0-65.145,16.716-84.298,42.47c-7.763-1.628-15.694-2.47-23.702-2.47c-63.411,0-115,51.589-115,115 C0,280.034,6.716,286.75,15,286.75z M223,146.75c41.355,0,75,33.645,75,75s-33.645,75-75,75s-75-33.645-75-75 S181.645,146.75,223,146.75z" />
+                        <path id="XMLID_461_"
+                            d="M115,1.25c-34.602,0-62.751,28.15-62.751,62.751S80.398,126.75,115,126.75 c34.601,0,62.75-28.148,62.75-62.749S149.601,1.25,115,1.25z" />
+                        <path id="XMLID_462_"
+                            d="M193,236.75h15v15c0,8.284,6.716,15,15,15s15-6.716,15-15v-15h15c8.284,0,15-6.716,15-15s-6.716-15-15-15 h-15v-15c0-8.284-6.716-15-15-15s-15,6.716-15,15v15h-15c-8.284,0-15,6.716-15,15S184.716,236.75,193,236.75z" />
+                    </g>
+                </svg>
+                <div class="caixa">
+                    <p>Novo ADM</p>
                 </div>
             </button>
 
@@ -84,61 +101,61 @@
         </ul>
     </aside>
     <main id="Maindashboard" class="Maindashboard">
-            <div class="graficos">
-                <div class="linha">
-                    <div class="caixas_grafico">
-                        <canvas class="VizuGrafico" id="Graficopublico"></canvas>
-                        <div class="textoGrafico">
-                            <h3>Porcentagem do público</h3>
-                            <p>Masculino</p>
-                            <span>10</span>
-                            <p>Femino</p>
-                            <span>20</span>
-                        </div>
-                    </div>
-                    <div class="caixas_grafico">
-                        <canvas class="VizuGrafico" id="GraficofezQuiz"></canvas>
-                        <div class="textoGrafico">
-                            <h3>Usuarios / Participantes dos Quizzes</h3>
-                            <p>Usuarios</p>
-                            <span>10</span>
-                            <p>Usuarios Quiz</p>
-                            <span>20</span>
-                        </div>
+        <div class="graficos">
+            <div class="linha">
+                <div class="caixas_grafico">
+                    <canvas class="VizuGrafico" id="Graficopublico"></canvas>
+                    <div class="textoGrafico">
+                        <h3>Porcentagem do público</h3>
+                        <p>Masculino</p>
+                        <span>10</span>
+                        <p>Femino</p>
+                        <span>20</span>
                     </div>
                 </div>
-                <div class="linha">
-                    <div class="caixas_grafico">
-                        <canvas class="VizuGrafico" id="GraficoQntQuiz"></canvas>
-                    </div>
-                    <div class="caixas_grafico">
-                        <canvas class="VizuGrafico" id="Graficonivel"></canvas>
+                <div class="caixas_grafico">
+                    <canvas class="VizuGrafico" id="GraficofezQuiz"></canvas>
+                    <div class="textoGrafico">
+                        <h3>Porcentagem de usuario que responderam o quiz</h3>
+                        <p>Usuarios</p>
+                        <span>10</span>
+                        <p>Usuarios Quiz</p>
+                        <span>20</span>
                     </div>
                 </div>
             </div>
-                        <nav class="kpis">
-
-                <div class="kpi">
-                    <p>Total de Usuários</p>
-                    <span class="dados">3</span>
+            <div class="linha">
+                <div class="caixas_grafico">
+                    <canvas class="graficoLinha" id="GraficoQntQuiz"></canvas>
                 </div>
-
-                <div class="kpi">
-                    <p>Quizzes Respondidos</p>
-                    <span class="dados">10</span>
+                <div class="caixas_grafico">
+                    <canvas class="graficoLinha" id="Graficonivel"></canvas>
                 </div>
+            </div>
+        </div>
+        <nav class="kpis">
 
-                <div class="kpi">
-                    <p>Quiz Mais Popular</p>
-                    <span class="dados">3</span>
-                </div>
+            <div class="kpi">
+                <p>Total de Usuários</p>
+                <span class="dados">3</span>
+            </div>
 
-                <div class="kpi">
-                    <p>Idade Média</p>
-                    <span class="dados">10</span>
-                </div>
+            <div class="kpi">
+                <p>Quizzes Respondidos</p>
+                <span class="dados">10</span>
+            </div>
 
-            </nav>
+            <div class="kpi">
+                <p>Quiz Mais Popular</p>
+                <span class="dados">3</span>
+            </div>
+
+            <div class="kpi">
+                <p>Idade Média</p>
+                <span class="dados">10</span>
+            </div>
+
+        </nav>
     </main>
 </body>
 
@@ -152,24 +169,30 @@
         data: {
             labels: ['Masculino', 'Feminino'],
             datasets: [{
-                label: '# of Votes',
+                label: 'Sexo',
                 data: [19, 19],
                 borderWidth: 0
             }]
         },
+        options: {
+            responsive: false,
+        }
     });
 
     const GraficofezQuiz = document.getElementById('GraficofezQuiz');
     new Chart(GraficofezQuiz, {
         type: 'doughnut',
         data: {
-            labels: ['Quiz', 'Não Quiz'],
+            labels: ['Respondeu', 'Não respondeu'],
             datasets: [{
-                label: '# of Votes',
+                label: 'Realizou',
                 data: [19, 19],
                 borderWidth: 0
             }]
         },
+        options: {
+            responsive: false,
+        }
     });
 
     const GraficoQntQuiz = document.getElementById('GraficoQntQuiz').getContext('2d');
@@ -183,14 +206,14 @@
             }]
         },
         options: {
-            responsive: true,
+            responsive: false,
             plugins: {
                 legend: {
                     display: false
                 },
                 title: {
                     display: true,
-                    text: 'Quantidade de Quiz realizado',
+                    text: 'Quantidade de realização de cada Quiz',
                     font: {
                         size: 18
                     }
@@ -217,14 +240,14 @@
             }]
         },
         options: {
-            responsive: true,
+            responsive: false,
             plugins: {
                 legend: {
                     display: false
                 },
                 title: {
                     display: true,
-                    text: 'Quantidade de nível de usuario',
+                    text: 'Quantidade de cada nível de usuario',
                     font: {
                         size: 18
                     }
